proposer refact 1 finished